adding Intro. TODO: specify if classification or regression

--- a/VectorNation_MCO.ipynb
+++ b/VectorNation_MCO.ipynb
@@ -11,6 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We are **Vector Nation**. Composed of the following:\n",
+    "- Ariaga, Marian\n",
+    "- Clemente, Francis\n",
+    "- De Guzman, Evan\n",
+    "- Villaflores, Charlize\n",
+    "\n",
+    "Taking STINTSY, section S16 under Sir Alvin Alon. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Major Course Output (MCO) is to solve a <span style=\"color:red\">*classification / regression*</span> task using the Philippine Statistics Authority or PSA's <span style=\"color:green\">**Family Income and Expenditure dataset**.</span> \n",
+    "\n",
+    "### *classification / regression task*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Description of the Data Set"
    ]
   },
