added more into introduction

--- a/VectorNation_MCO.ipynb
+++ b/VectorNation_MCO.ipynb
@@ -26,7 +26,12 @@
    "source": [
     "This Major Course Output (MCO) is to solve a <span style=\"color:red\">*classification / regression*</span> task using the Philippine Statistics Authority or PSA's <span style=\"color:green\">**Family Income and Expenditure dataset**.</span> \n",
     "\n",
-    "### *classification / regression task*"
+    "### *classification / regression task*\n",
+    "\n",
+    "We will use these three algorithms:\n",
+    "- Algorithm 1\n",
+    "- Algorithm 2\n",
+    "- Algorithm 3"
    ]
   },
   {
@@ -39,8 +44,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# List of Requirements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red\">**#TODO**</span> Update accordingly depending on what we use in the entirety of the notebook."
    ]
   },
   {
