updated the notebook.

--- a/VectorNation_MCO.ipynb
+++ b/VectorNation_MCO.ipynb
@@ -24,14 +24,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Major Course Output (MCO) is to solve a <span style=\"color:red\">*classification / regression*</span> task using the Philippine Statistics Authority or PSA's <span style=\"color:green\">**Family Income and Expenditure dataset**.</span> \n",
+    "This **Major Course Output (MCO)** aims to solve both a classification and regression task task using the Philippine Statistics Authority or PSA's <span style=\"color:green\">**Family Income and Expenditure dataset**.</span> \n",
     "\n",
-    "### *classification / regression task*\n",
+    "### The Tasks\n",
     "\n",
-    "We will use these three algorithms:\n",
-    "- Algorithm 1\n",
-    "- Algorithm 2\n",
-    "- Algorithm 3"
+    "In specificity, the group aims to create train and test two machine learning models that can:\n",
+    "1. Classify employment status based on education level and\n",
+    "2. Predict food budget for different family sizes\n",
+    "\n",
+    "We will use these three algorithms: (still not sure lmao)\n",
+    "- kNN Clustering Algorithm\n",
+    "- Linear Regression and Logistic Regression\n",
+    "- Neural Networks"
    ]
   },
   {
@@ -44,7 +48,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Once again, the data set that we will use is  <span style=\"color:green\">**Family Income and Expenditure dataset**.</span>. The original data set has an enormous 119 variables to use. For the purposes of the tasks at hand, many variables will be cut off "
+   ]
   },
   {
    "cell_type": "markdown",
