Fine tuning complete for logistic regrsesion

--- a/VectorNation_MCO.ipynb
+++ b/VectorNation_MCO.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, roc_auc_score\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, roc_auc_score, classification_report\n",
     "\n",
     "import warnings\n",
     "warnings.simplefilter('ignore')\n"
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,77 +1457,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After any preprocessing, we used a K-fold cross-validation to evaluate the perforamnce of LG model on our training data. We want to calculate the F1-score and Accuracy."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average F1-score: 0.8843427478765374\n",
-      "Average Accuracy: 0.7929115364599826\n"
+      "Training F1-score: 0.44944632505112675\n",
+      "Training Accuracy: 0.8163743531015394\n",
+      "Test F1-score: 0.44954442693704183\n",
+      "Test Accuracy: 0.8166770379589297\n"
      ]
     }
    ],
    "source": [
-    "model = LogisticRegression(random_state=11)\n",
-    "f1_scores = cross_val_score(model, X_train_scaled, y_train, scoring='f1', cv=kf)\n",
+    "model = LogisticRegression(C=0.0001, penalty='l1', solver='liblinear')\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "f1_scores = cross_val_score(model, X_train_scaled, y_train, scoring='f1_macro', cv=kf)\n",
     "accuracy_scores = cross_val_score(model, X_train_scaled, y_train, scoring='accuracy', cv=kf)\n",
     "\n",
-    "print(f\"Average F1-score: {np.mean(f1_scores)}\")\n",
-    "print(f\"Average Accuracy: {np.mean(accuracy_scores)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Model is trained using the scaled training data. After training, the model predicts labels for the scaled test set. We want to train the model once and then evaluate it on a separate test set. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.fit(X_train_scaled, y_train)\n",
-    "y_predicted = model.predict(X_test_scaled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1-score: 0.8842383369255372\n",
-      "Accuracy: 0.7927815805849409\n"
-     ]
-    }
-   ],
-   "source": [
-    "f1_test = f1_score(y_test, y_predicted)\n",
+    "print(f\"Training F1-score: {np.mean(f1_scores)}\")\n",
+    "print(f\"Training Accuracy: {np.mean(accuracy_scores)}\")\n",
+    "\n",
+    "y_predicted = model.predict(X_test_scaled)\n",
+    "f1_test = f1_score(y_test, y_predicted, average='macro')\n",
     "accuracy_test = accuracy_score(y_test, y_predicted)\n",
     "\n",
-    "print(f\"F1-score: {f1_test}\")\n",
-    "print(f\"Accuracy: {accuracy_test}\")"
+    "print(f\"Test F1-score: {f1_test}\")\n",
+    "print(f\"Test Accuracy: {accuracy_test}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1636,10 +1601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_proba = model.predict_proba(X_test_scaled)[:, 1]\n",
-    "\n",
-    "print(classification_report(y_test, y_predicted))\n",
-    "print(\"AUC-ROC Score:\", roc_auc_score(y_test, y_proba))"
+    "print(classification_report(y_test, y_predicted))"
    ]
   },
   {
@@ -11299,7 +11261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -11329,6 +11291,164 @@
     "\n",
     "print(f\"Test F1-score: {f1_test}\")\n",
     "print(f\"Test Accuracy: {accuracy_test}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6562,    0],\n",
+       "       [1473,    0]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm = confusion_matrix(y_test, y_predicted)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.82      1.00      0.90      6562\n",
+      "           2       0.00      0.00      0.00      1473\n",
+      "\n",
+      "    accuracy                           0.82      8035\n",
+      "   macro avg       0.41      0.50      0.45      8035\n",
+      "weighted avg       0.67      0.82      0.73      8035\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced class distribution: Counter({1: 17516, 2: 14590})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Counter\n",
+    "from imblearn.combine import SMOTEENN\n",
+    "\n",
+    "smote_enn = SMOTEENN(random_state=11)\n",
+    "X_train_balanced, y_train_balanced = smote_enn.fit_resample(X_train_scaled, y_train)\n",
+    "print(\"Balanced class distribution:\", Counter(y_train_balanced))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training F1-score: 0.3529550270410785\n",
+      "Training Accuracy: 0.5455675438111398\n",
+      "Test F1-score: 0.44954442693704183\n",
+      "Test Accuracy: 0.8166770379589297\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_model = LogisticRegression(C=0.0001, class_weight='balanced', penalty='l1', solver='liblinear')\n",
+    "n_model.fit(X_train_balanced, y_train_balanced)\n",
+    "\n",
+    "f1_scores = cross_val_score(n_model, X_train_balanced, y_train_balanced, scoring='f1_macro', cv=kf)\n",
+    "accuracy_scores = cross_val_score(n_model, X_train_balanced, y_train_balanced, scoring='accuracy', cv=kf)\n",
+    "\n",
+    "print(f\"Training F1-score: {np.mean(f1_scores)}\")\n",
+    "print(f\"Training Accuracy: {np.mean(accuracy_scores)}\")\n",
+    "\n",
+    "y_predicted = n_model.predict(X_test_scaled)\n",
+    "f1_test = f1_score(y_test, y_predicted , average='macro')\n",
+    "accuracy_test = accuracy_score(y_test, y_predicted)\n",
+    "\n",
+    "print(f\"Test F1-score: {f1_test}\")\n",
+    "print(f\"Test Accuracy: {accuracy_test}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced class distribution: Counter({1: 26235, 2: 26235})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "smote = SMOTE(random_state=11)\n",
+    "X_train_balanced, y_train_balanced = smote.fit_resample(X_train_scaled, y_train)\n",
+    "print(\"Balanced class distribution:\", Counter(y_train_balanced))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training F1-score: 0.3333211471029242\n",
+      "Training Accuracy: 0.5000000000000001\n",
+      "Test F1-score: 0.564489973806237\n",
+      "Test Accuracy: 0.5853142501555694\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_model = LogisticRegression(C=0.0001, class_weight='balanced', penalty='l1', solver='liblinear')\n",
+    "n_model.fit(X_train_balanced, y_train_balanced)\n",
+    "\n",
+    "f1_scores = cross_val_score(n_model, X_train_balanced, y_train_balanced, scoring='f1_macro', cv=kf)\n",
+    "accuracy_scores = cross_val_score(n_model, X_train_balanced, y_train_balanced, scoring='accuracy', cv=kf)\n",
+    "\n",
+    "print(f\"Training F1-score: {np.mean(f1_scores)}\")\n",
+    "print(f\"Training Accuracy: {np.mean(accuracy_scores)}\")\n",
+    "\n",
+    "y_predicted = n_model.predict(X_test_scaled)\n",
+    "f1_test = f1_score(y_test, y_predicted , average='macro')\n",
+    "accuracy_test = accuracy_score(y_test, y_predicted)\n",
+    "\n",
+    "print(f\"Test F1-score: {f1_test}\")\n",
+    "print(f\"Test Accuracy: {accuracy_test}\")"
    ]
   },
   {
